--- a/focus/app/src/main/AndroidManifest.xml
+++ b/focus/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.derassom.three_pixels.focus">
+
     <uses-permission
         android:name="android.permission.PACKAGE_USAGE_STATS"
         tools:ignore="ProtectedPermissions" />
@@ -23,7 +24,9 @@
 
         <service
             android:name=".runningAppService"
-            android:exported="false"></service>
+            android:exported="false" />
+
+        <activity android:name=".passLocker"></activity>
     </application>
 
 </manifest>
