--- a/focus/app/build.gradle
+++ b/focus/app/build.gradle
@@ -53,5 +53,5 @@ dependencies {
 
     // Test helpers for Room
     testImplementation "android.arch.persistence.room:testing:1.0.0"
+    implementation 'com.android.support:support-v4:27.1.1'
 }
-
